// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should have no basic DOM regression for p-accordion 1`] = `
"<h2 class="heading">
  <button id="accordion-control" type="button" aria-expanded="false" aria-controls="accordion-panel">
    <slot name="heading">
    </slot>
    <span class="icon-container">
      <p-icon class="icon hydrated" aria-hidden="true">
      </p-icon>
    </span>
  </button>
</h2>
<div id="accordion-panel" class="collapsible" role="region" aria-labelledby="accordion-control">
  <div>
    <slot>
    </slot>
  </div>
</div>"
`;

exports[`should have no basic DOM regression for p-banner 1`] = `
"<p-inline-notification aria-hidden="true" class="hydrated">
</p-inline-notification>"
`;

exports[`should have no basic DOM regression for p-button 1`] = `
"<button class="root" type="submit">
  <span class="label">
    <slot>
    </slot>
  </span>
</button>"
`;

exports[`should have no basic DOM regression for p-button-group 1`] = `
"<div role="group">
  <slot>
  </slot>
</div>"
`;

exports[`should have no basic DOM regression for p-button-pure 1`] = `
"<button class="root" type="submit">
  <p-icon class="icon hydrated" aria-hidden="true">
  </p-icon>
  <span class="label">
    <slot>
    </slot>
  </span>
</button>"
`;

exports[`should have no basic DOM regression for p-button-tile 1`] = `
"<div class="root">
  <div class="image-container">
    <slot>
    </slot>
  </div>
  <div class="content">
    <p>
      value</p>
    <p-button class="link-or-button hydrated">
      value</p-button>
  </div>
</div>"
`;

exports[`should have no basic DOM regression for p-carousel 1`] = `
"<div class="header">
  <slot name="heading">
  </slot>
  <div class="nav">
  </div>
</div>
<div id="splide" class="splide splide--slide splide--ltr is-active is-initialized" role="region" aria-roledescription="carousel">
  <div class="splide__track splide__track--slide splide__track--ltr" id="splide-track" aria-live="polite" aria-atomic="true" style="padding-left: 0px; padding-right: 0px;">
    <div class="splide__list" id="splide-list" role="presentation" style="transform: translateX(0px);">
    </div>
  </div>
</div>"
`;

exports[`should have no basic DOM regression for p-checkbox-wrapper 1`] = `
"<label>
  <slot>
  </slot>
</label>"
`;

exports[`should have no basic DOM regression for p-content-wrapper 1`] = `
"<div class="root">
  <slot>
  </slot>
</div>"
`;

exports[`should have no basic DOM regression for p-crest 1`] = `
"<picture>
  <source srcset="http://localhost:3001/crest/porsche-crest.min.0d0cc89ae5ee57c4c15bd0dbbcbfe5d0@1x.webp 1x,http://localhost:3001/crest/porsche-crest.min.2245c45e99be5a46b4b56e73c43d5c63@2x.webp 2x,http://localhost:3001/crest/porsche-crest.min.19b429278b158b5cb5aa6ce80751e3fe@3x.webp 3x" type="image/webp">
  <source srcset="http://localhost:3001/crest/porsche-crest.min.d76137cf8cf94822b7aedb534ba88418@1x.png 1x,http://localhost:3001/crest/porsche-crest.min.8a292fbd35a5155789ddd011585e05c4@2x.png 2x,http://localhost:3001/crest/porsche-crest.min.18d6f02003b0829bac939fade88fd4e6@3x.png 3x" type="image/png">
  <img src="http://localhost:3001/crest/porsche-crest.min.8a292fbd35a5155789ddd011585e05c4@2x.png" width="30" height="40" alt="Porsche">
</picture>"
`;

exports[`should have no basic DOM regression for p-display 1`] = `
"<h1 class="root">
  <slot>
  </slot>
</h1>"
`;

exports[`should have no basic DOM regression for p-divider 1`] = `"<hr>"`;

exports[`should have no basic DOM regression for p-fieldset 1`] = `
"<fieldset>
  <slot>
  </slot>
</fieldset>"
`;

exports[`should have no basic DOM regression for p-fieldset-wrapper 1`] = `
"<fieldset>
  <slot>
  </slot>
</fieldset>"
`;

exports[`should have no basic DOM regression for p-flex 1`] = `
"<slot>
</slot>"
`;

exports[`should have no basic DOM regression for p-flex-item 1`] = `
"<slot>
</slot>"
`;

exports[`should have no basic DOM regression for p-flyout 1`] = `
"<div class="root" role="dialog" aria-modal="true" aria-hidden="true" tabindex="-1">
  <div class="header">
    <p-button-pure class="dismiss hydrated">
      Dismiss flyout</p-button-pure>
  </div>
  <div class="content">
    <slot>
    </slot>
  </div>
</div>"
`;

exports[`should have no basic DOM regression for p-grid 1`] = `
"<slot>
</slot>"
`;

exports[`should have no basic DOM regression for p-grid-item 1`] = `
"<slot>
</slot>"
`;

exports[`should have no basic DOM regression for p-heading 1`] = `
"<h2 class="root">
  <slot>
  </slot>
</h2>"
`;

exports[`should have no basic DOM regression for p-headline 1`] = `
"<h1 class="root">
  <slot>
  </slot>
</h1>"
`;

exports[`should have no basic DOM regression for p-icon 1`] = `"<img src="http://localhost:3001/icons/arrow-right.min.8fb7b42d2d08d60f918602aa28475c0b.svg" width="24" height="24" loading="lazy" alt="">"`;

exports[`should have no basic DOM regression for p-inline-notification 1`] = `
"<p-icon class="icon hydrated" aria-hidden="true">
</p-icon>
<div id="banner" class="content" role="status" aria-live="polite" aria-labelledby="label" aria-describedby="description">
  <p id="description">
    <slot>
    </slot>
  </p>
</div>
<p-button-pure class="close hydrated" aria-controls="banner">
  Close notification</p-button-pure>"
`;

exports[`should have no basic DOM regression for p-link 1`] = `
"<a class="root" href="value" target="_self">
  <span class="label">
    <slot>
    </slot>
  </span>
</a>"
`;

exports[`should have no basic DOM regression for p-link-pure 1`] = `
"<a class="root" href="value" target="_self">
  <p-icon class="icon hydrated" aria-hidden="true">
  </p-icon>
  <span class="label">
    <slot>
    </slot>
  </span>
</a>"
`;

exports[`should have no basic DOM regression for p-link-social 1`] = `
"<a class="root" href="value" target="_self">
  <p-icon class="icon hydrated" aria-hidden="true">
  </p-icon>
  <span class="label">
    <slot>
    </slot>
  </span>
</a>"
`;

exports[`should have no basic DOM regression for p-link-tile 1`] = `
"<div class="root">
  <div class="image-container">
    <slot>
    </slot>
  </div>
  <div class="content">
    <a href="value" target="_self" class="link-overlay" tabindex="-1" aria-hidden="true">
    </a>
    <p>
      value</p>
    <p-link class="link-or-button hydrated">
      value</p-link>
  </div>
</div>"
`;

exports[`should have no basic DOM regression for p-link-tile-model-signature 1`] = `
"<div class="root">
  <div class="image-container">
    <slot>
    </slot>
  </div>
  <p-model-signature class="model hydrated">
  </p-model-signature>
  <div class="content">
    <a class="link-overlay" href="#" target="_self" tabindex="-1" aria-hidden="true">
    </a>
    <h2 class="heading">
      value</h2>
    <div class="link-group" role="group">
      <slot name="primary">
      </slot>
      <slot name="secondary">
      </slot>
    </div>
  </div>
</div>"
`;

exports[`should have no basic DOM regression for p-marque 1`] = `
"<picture>
  <source srcset="http://localhost:3001/marque/porsche-marque-trademark.medium.min.5c6af9aa7946fea34f60c8f8c95d0188@1x.webp 1x,http://localhost:3001/marque/porsche-marque-trademark.medium.min.fff6e9b91481cc5b1fc6c9b62987ccaf@2x.webp 2x,http://localhost:3001/marque/porsche-marque-trademark.medium.min.f67092ff6b5f4ecb4add73d6ae153db0@3x.webp 3x" media="(min-width: 1300px)" type="image/webp">
  <source srcset="http://localhost:3001/marque/porsche-marque-trademark.medium.min.da075315857e239ff46bf4c150648ff0@1x.png 1x,http://localhost:3001/marque/porsche-marque-trademark.medium.min.aa801f42028b1c385a5e26ae115da598@2x.png 2x,http://localhost:3001/marque/porsche-marque-trademark.medium.min.824818d15eaf445f50e0a2391613f214@3x.png 3x" media="(min-width: 1300px)" type="image/png">
  <source srcset="http://localhost:3001/marque/porsche-marque-trademark.small.min.783639706bead66b2d56e3b8b64bd61f@1x.webp 1x,http://localhost:3001/marque/porsche-marque-trademark.small.min.760a57efa93d4e7e16e26128ec7ead46@2x.webp 2x,http://localhost:3001/marque/porsche-marque-trademark.small.min.1726036a7829347e1e24d1eb54fc0d64@3x.webp 3x" type="image/webp">
  <source srcset="http://localhost:3001/marque/porsche-marque-trademark.small.min.020244b41a29323e2a7932a264514cdf@1x.png 1x,http://localhost:3001/marque/porsche-marque-trademark.small.min.92184fae44511ceda8320443c17110b1@2x.png 2x,http://localhost:3001/marque/porsche-marque-trademark.small.min.fd545cea4298f5d797246d5805711646@3x.png 3x" type="image/png">
  <img src="http://localhost:3001/marque/porsche-marque-trademark.medium.min.aa801f42028b1c385a5e26ae115da598@2x.png" alt="Porsche">
</picture>"
`;

exports[`should have no basic DOM regression for p-modal 1`] = `
"<div class="root" role="dialog" aria-modal="true" aria-hidden="true" tabindex="-1">
  <p-button-pure class="dismiss hydrated">
    Dismiss modal</p-button-pure>
  <div class="content">
    <slot>
    </slot>
  </div>
</div>"
`;

exports[`should have no basic DOM regression for p-model-signature 1`] = `"<img src="http://localhost:3001/model-signatures/911.min.5c462658f9d472e90a139173414e8fdd.svg" height="36" alt="911">"`;

exports[`should have no basic DOM regression for p-multi-select 1`] = `
"<div class="root">
  <label class="label">
  </label>
  <div class="input-container">
    <input role="combobox" autocomplete="off" aria-labelledby="label" aria-describedby="description options-selected state-message" aria-haspopup="listbox" aria-expanded="false" aria-controls="list" aria-autocomplete="list">
    <p-icon class="icon toggle-icon hydrated" aria-hidden="true">
    </p-icon>
  </div>
  <div id="list" class="listbox" role="listbox" aria-label="" aria-hidden="true" aria-multiselectable="true">
    <slot>
    </slot>
  </div>
</div>
<span class="sr-text" role="status" aria-live="assertive" aria-relevant="additions text">
</span>"
`;

exports[`should have no basic DOM regression for p-multi-select-option 1`] = `
"<div class="option">
  <p-checkbox-wrapper class="checkbox hydrated">
    <input role="option" type="checkbox" aria-selected="false" aria-label="Some child" tabindex="-1">
    <slot slot="label">
    </slot>
  </p-checkbox-wrapper>
</div>"
`;

exports[`should have no basic DOM regression for p-pagination 1`] = `
"<nav role="navigation" aria-label="Pagination">
  <ul>
    <li>
      <span role="button" aria-label="Previous page" aria-disabled="true">
        <p-icon aria-hidden="true" class="hydrated">
        </p-icon>
      </span>
    </li>
    <li>
      <span role="button" tabindex="0" aria-label="Page 1" aria-current="page">
        1</span>
    </li>
    <li>
      <span role="button" aria-label="Next page" aria-disabled="true">
        <p-icon aria-hidden="true" class="hydrated">
        </p-icon>
      </span>
    </li>
  </ul>
</nav>"
`;

exports[`should have no basic DOM regression for p-popover 1`] = `
"<button type="button" aria-expanded="false">
  <p-icon class="icon hydrated">
  </p-icon>
  <span class="label">
    More information</span>
</button>"
`;

exports[`should have no basic DOM regression for p-radio-button-wrapper 1`] = `
"<label>
  <slot>
  </slot>
</label>"
`;

exports[`should have no basic DOM regression for p-scroller 1`] = `
"<div class="root">
  <div class="scroll-area">
    <div class="scroll-wrapper">
      <slot>
      </slot>
      <div class="trigger">
      </div>
      <div class="trigger">
      </div>
    </div>
  </div>
  <div class="action-prev">
    <button type="button" tabindex="-1" aria-hidden="true" aria-label="prev">
      <p-icon class="icon hydrated">
      </p-icon>
    </button>
  </div>
  <div class="action-next">
    <button type="button" tabindex="-1" aria-hidden="true" aria-label="next">
      <p-icon class="icon hydrated">
      </p-icon>
    </button>
  </div>
</div>"
`;

exports[`should have no basic DOM regression for p-segmented-control 1`] = `
"<slot>
</slot>"
`;

exports[`should have no basic DOM regression for p-segmented-control-item 1`] = `
"<button type="button" aria-pressed="false">
  <slot>
  </slot>
</button>"
`;

exports[`should have no basic DOM regression for p-select-wrapper 1`] = `
"<div class="root">
  <label class="label">
    <p-icon class="icon hydrated" aria-hidden="true">
    </p-icon>
    <slot>
    </slot>
  </label>
  <p-select-wrapper-dropdown class="hydrated">
  </p-select-wrapper-dropdown>
</div>"
`;

exports[`should have no basic DOM regression for p-spinner 1`] = `
"<span class="root" role="alert" aria-live="assertive">
  <span class="sr-only">
    &nbsp;</span>
  <svg viewBox="-16 -16 32 32" width="100%" height="100%" focusable="false" aria-hidden="true">
    <circle r="9">
    </circle>
    <circle r="9">
    </circle>
  </svg>
</span>"
`;

exports[`should have no basic DOM regression for p-stepper-horizontal 1`] = `
"<p-scroller class="scroller hydrated">
  <slot>
  </slot>
</p-scroller>"
`;

exports[`should have no basic DOM regression for p-stepper-horizontal-item 1`] = `
"<button type="button" aria-disabled="true">
  <slot>
  </slot>
</button>"
`;

exports[`should have no basic DOM regression for p-switch 1`] = `
"<button aria-checked="false" class="root" type="button" role="switch">
  <span class="switch">
    <span class="toggle">
    </span>
  </span>
  <span class="label">
    <slot>
    </slot>
  </span>
</button>"
`;

exports[`should have no basic DOM regression for p-table 1`] = `
"<p-scroller class="hydrated">
  <div class="table" role="table">
    <slot>
    </slot>
  </div>
</p-scroller>"
`;

exports[`should have no basic DOM regression for p-table-body 1`] = `
"<slot>
</slot>"
`;

exports[`should have no basic DOM regression for p-table-cell 1`] = `
"<slot>
</slot>"
`;

exports[`should have no basic DOM regression for p-table-head 1`] = `
"<slot>
</slot>"
`;

exports[`should have no basic DOM regression for p-table-head-cell 1`] = `
"<span>
  <slot>
  </slot>
</span>"
`;

exports[`should have no basic DOM regression for p-table-head-row 1`] = `
"<slot>
</slot>"
`;

exports[`should have no basic DOM regression for p-table-row 1`] = `
"<slot>
</slot>"
`;

exports[`should have no basic DOM regression for p-tabs 1`] = `
"<p-tabs-bar class="root hydrated">
</p-tabs-bar>
<slot>
</slot>"
`;

exports[`should have no basic DOM regression for p-tabs-bar 1`] = `
"<p-scroller class="scroller hydrated">
  <slot>
  </slot>
  <span class="bar">
  </span>
</p-scroller>"
`;

exports[`should have no basic DOM regression for p-tabs-item 1`] = `
"<slot>
</slot>"
`;

exports[`should have no basic DOM regression for p-tag 1`] = `
"<span>
  <div class="label">
    <slot>
    </slot>
  </div>
</span>"
`;

exports[`should have no basic DOM regression for p-tag-dismissible 1`] = `
"<button type="button">
  <span class="sr-only">
    Remove:</span>
  <span>
    <slot>
    </slot>
  </span>
  <p-icon class="icon hydrated" aria-hidden="true">
  </p-icon>
</button>"
`;

exports[`should have no basic DOM regression for p-text 1`] = `
"<p class="root">
  <slot>
  </slot>
</p>"
`;

exports[`should have no basic DOM regression for p-text-field-wrapper 1`] = `
"<div class="root">
  <label class="label">
    <slot>
    </slot>
  </label>
</div>"
`;

exports[`should have no basic DOM regression for p-text-list 1`] = `
"<ul>
  <slot>
  </slot>
</ul>"
`;

exports[`should have no basic DOM regression for p-text-list-item 1`] = `
"<slot>
</slot>"
`;

exports[`should have no basic DOM regression for p-textarea-wrapper 1`] = `
"<label class="label">
  <slot>
  </slot>
</label>"
`;

exports[`should have no basic DOM regression for p-toast 1`] = `""`;

exports[`should have no basic DOM regression for p-wordmark 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 4500 300">
  <title>
    Porsche</title>
  <path d="M502 221c48.1 0 74-25.9 74-74V74c0-48.1-25.9-74-74-74H0v300h68v-79h434zm6-143v65c0 7.8-4.2 12-12 12H68V66h428c7.8 0 12 4.2 12 12zm228 222c-48.1 0-74-25.9-74-74V74c0-48.1 25.9-74 74-74h417c48.1 0 74 25.9 74 74v152c0 48.1-25.9 74-74 74H736zm411-66c7.8 0 12-4.2 12-12V78c0-7.8-4.2-12-12-12H742c-7.8 0-12 4.2-12 12v144c0 7.8 4.2 12 12 12h405zm675-36c39.844 16.757 67.853 56.1 68 102h-68c0-54-25-79-79-79h-361v79h-68V0h502c48.1 0 74 25.9 74 74v50.14c0 46.06-23.75 71.76-68 73.86zm-12-43c7.8 0 12-4.2 12-12V78c0-7.8-4.2-12-12-12h-428v89h428zm162-81c0-48.1 25.9-74 74-74h492v56h-486c-7.8 0-12 4.2-12 12v42c0 7.8 4.2 12 12 12h422c48.1 0 74 25.9 74 74v30c0 48.1-25.9 74-74 74h-492v-56h486c7.8 0 12-4.2 12-12v-42c0-7.8-4.2-12-12-12h-422c-48.1 0-74-25.9-74-74V74zm661 0c0-48.1 25.9-74 74-74h480v66h-474c-7.8 0-12 4.2-12 12v144c0 7.8 4.2 12 12 12h474v66h-480c-48.1 0-74-25.9-74-74V74zM3817 0v300h-68V183h-407v117h-68V0h68v117h407V0h68zm156 56v66h527v56h-527v66h527v56h-595V0h595v56h-527z">
  </path>
</svg>"
`;
